Fixed textarea jumping. Closes #38

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,5 +37,7 @@ hr {
 }
 
 textarea {
-  resize: vertical;
+  resize: none;
+  overflow-y: hidden;
+  min-height: 300px;
 }
